@@ -9,8 +9,10 @@
   <extends>gnome-control-center.desktop</extends>
   <name>L2TP VPN Client</name>
   <name xml:lang="ru">Клиент L2TP VPN</name>
+  <name xml:lang="ka">L2TP VPN-ის კლიენტი</name>
   <summary>Client for L2TP based virtual private networks</summary>
   <summary xml:lang="ru">Клиент для виртуальных частных сетей на основе протокола L2TP</summary>
+  <summary xml:lang="ka">L2TP ვირტუალური პირადი ქსელების კლიენტი</summary>
   <keywords>
     <keyword>network</keyword>
     <keyword>manager</keyword>
@@ -22,22 +24,26 @@
   <description>
     <p>Support for configuring L2TP based virtual private network connections.</p>
     <p xml:lang="ru">Помощь в настройке параметров соединений виртуальных частных сетей наоснове протокола L2TP.</p>
+    <p xml:lang="ka">L2TP-ზე დაფუძნებულ ვირტუალურ კერძო ქსელებთან მიერთების მორგების მხარდაჭერა.</p>
     <p>Compatible with L2TP and L2TP over IPsec services.</p>
     <p xml:lang="ru">Совместим со службами L2TP и L2TP через IPsec.</p>
+    <p xml:lang="ka">თავსებადია L2TP და L2TP IPsec-ის ზემოდან სერვისებთან.</p>
   </description>
   <screenshots>
     <screenshot type="default">
-      <image width="800" height="608">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.10/appdata/l2tp.png</image>
+      <image width="800" height="608">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.12/appdata/l2tp.png</image>
     </screenshot>
     <screenshot type="default">
       <caption>The IPsec options dialog</caption>
       <caption xml:lang="ru">Диалоговое окно настройки параметров IPsec</caption>
-      <image width="800" height="595">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.10/appdata/l2tp-ipsec.png</image>
+      <caption xml:lang="ka">IPsec-ის პარამეტრების ფანჯარა</caption>
+      <image width="800" height="595">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.12/appdata/l2tp-ipsec.png</image>
     </screenshot>
     <screenshot type="default">
       <caption>The PPP options dialog</caption>
       <caption xml:lang="ru">Диалоговое окно настройки параметров PPP</caption>
-      <image width="800" height="738">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.10/appdata/l2tp-ppp.png</image>
+      <caption xml:lang="ka">PPP-ის პარამეტრების ფანჯარა</caption>
+      <image width="800" height="738">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.12/appdata/l2tp-ppp.png</image>
     </screenshot>
   </screenshots>
   <url type="homepage">https://github.com/nm-l2tp/NetworkManager-l2tp</url>
@@ -46,4 +52,5 @@
   <translation type="gettext">NetworkManager-l2tp</translation>
   <developer_name>The NetworkManager-L2TP Developers</developer_name>
   <developer_name xml:lang="ru">Разработчики NetworkManager-L2TP</developer_name>
+  <developer_name xml:lang="ka">NetworkManager-L2TP-ის პროგრამისტები</developer_name>
 </component>
