@@ -26,17 +26,17 @@
 
   <screenshots>
     <screenshot type="default">
-      <image width="800" height="608">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.10/appdata/l2tp.png</image>
+      <image width="800" height="608">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.12/appdata/l2tp.png</image>
     </screenshot>
 
     <screenshot type="default">
       <caption>The IPsec options dialog</caption>
-      <image width="800" height="595">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.10/appdata/l2tp-ipsec.png</image>
+      <image width="800" height="595">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.12/appdata/l2tp-ipsec.png</image>
     </screenshot>
 
     <screenshot type="default">
       <caption>The PPP options dialog</caption>
-      <image width="800" height="738">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.10/appdata/l2tp-ppp.png</image>
+      <image width="800" height="738">https://raw.githubusercontent.com/nm-l2tp/NetworkManager-l2tp/1.20.12/appdata/l2tp-ppp.png</image>
     </screenshot>
   </screenshots>
 
